Lazarus_Athena/include/Intrinsic.pas


    { widget  }    { callback_name  }    { callback  }    { closure  }
procedure XtAddCallback(para1:TWidget; _XtString:TXconst; para3:TXtCallbackProc; para4:TXtPointer);cdecl;external;
    { widget  }    { callback_name  }    { callback  }    { closure  }
procedure XtRemoveCallback(para1:TWidget; _XtString:TXconst; para3:TXtCallbackProc; para4:TXtPointer);cdecl;external;
    { widget  }    { callback_name  }    { callbacks  }
procedure XtAddCallbacks(para1:TWidget; _XtString:TXconst; para3:TXtCallbackList);cdecl;external;
    { widget  }    { callback_name  }    { callbacks  }
procedure XtRemoveCallbacks(para1:TWidget; _XtString:TXconst; para3:TXtCallbackList);cdecl;external;
    { widget  }    { callback_name  }
procedure XtRemoveAllCallbacks(para1:TWidget; _XtString:TXconst);cdecl;external;
    { widget  }    { callback_name  }    { call_data  }
procedure XtCallCallbacks(para1:TWidget; _XtString:TXconst; para3:TXtPointer);cdecl;external;
    { widget  }    { callbacks  }    { call_data  }
procedure XtCallCallbackList(para1:TWidget; para2:TXtCallbackList; para3:TXtPointer);cdecl;external;
    { widget  }    { callback_name  }
function XtHasCallbacks(para1:TWidget; _XtString:TXconst):TXtCallbackStatus;cdecl;external;
    {***************************************************************
     *
     * Geometry Management
     *
     *************************************************************** }
    { widget  }    { request  }    { reply_return  }
function XtMakeGeometryRequest(para1:TWidget; para2:PXtWidgetGeometry; para3:PXtWidgetGeometry):TXtGeometryResult;cdecl;external;
    { widget  }    { intended  }    { preferred_return  }
function XtQueryGeometry(para1:TWidget; para2:PXtWidgetGeometry; para3:PXtWidgetGeometry):TXtGeometryResult;cdecl;external;
    { name  }    { widgetClass  }    { parent  }    { args  }    { num_args  }
function XtCreatePopupShell(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; para4:TArgList; para5:TCardinal):TWidget;cdecl;external;
    { name  }    { widgetClass  }    { parent  }    {333333333333333333333333333333333******************************** }function XtVaCreatePopupShell(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; args:array of const):TWidget;cdecl;external;
function XtVaCreatePopupShell(_XtString:TXconst; para2:TWidgetClass; para3:TWidget):TWidget;cdecl;external;
    { popup_shell  }    { grab_kind  }
procedure XtPopup(para1:TWidget; para2:TXtGrabKind);cdecl;external;
    { popup_shell  }
procedure XtPopupSpringLoaded(para1:TWidget);cdecl;external;
    { widget  }    { closure  }    { call_data  }
procedure XtCallbackNone(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;
    { widget  }    { closure  }    { call_data  }
procedure XtCallbackNonexclusive(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;
    { widget  }    { closure  }    { call_data  }
procedure XtCallbackExclusive(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;
    { popup_shell  }
procedure XtPopdown(para1:TWidget);cdecl;external;
    { widget  }    { closure  }    { call_data  }
procedure XtCallbackPopdown(para1:TWidget; para2:TXtPointer; para3:TXtPointer);cdecl;external;
    { widget  }    { event  }    { params  }    { num_params  }
procedure XtMenuPopupAction(para1:TWidget; para2:PXEvent; para3:PString; para4:PCardinal);cdecl;external;
    { name  }    { widget_class  }    { parent  }    { args  }    { num_args  }
function XtCreateWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; para4:TArgList; para5:TCardinal):TWidget;cdecl;external;
    { name  }    { widget_class  }    { parent  }    { args  }    { num_args  }
function XtCreateManagedWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; para4:TArgList; para5:TCardinal):TWidget;cdecl;external;
    { name  }    { widget  }    { parent  }    {333333333333333333333333333333333******************************** }function XtVaCreateWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; args:array of const):TWidget;cdecl;external;
function XtVaCreateWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget):TWidget;cdecl;external;
    { name  }    { widget_class  }    { parent  }    {333333333333333333333333333333333******************************** }function XtVaCreateManagedWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget; args:array of const):TWidget;cdecl;external;
function XtVaCreateManagedWidget(_XtString:TXconst; para2:TWidgetClass; para3:TWidget):TWidget;cdecl;external;
    { obsolete  }
    { name  }    { widget_class  }    { args  }    { num_args  }
function XtCreateApplicationShell(_XtString:TXconst; para2:TWidgetClass; para3:TArgList; para4:TCardinal):TWidget;cdecl;external;
    { application_name  }    { application_class  }    { widget_class  }    { display  }    { args  }    { num_args  }
function XtAppCreateShell(_XtString:TXconst; _XtString:TXconst; para3:TWidgetClass; para4:PDisplay; para5:TArgList; 
               para6:TCardinal):TWidget;cdecl;external;
    { application_name  }    { application_class  }    { widget_class  }    { display  }    {333333333333333333333333333333333******************************** }function XtVaAppCreateShell(_XtString:TXconst; _XtString:TXconst; para3:TWidgetClass; para4:PDisplay; args:array of const):TWidget;cdecl;external;
function XtVaAppCreateShell(_XtString:TXconst; _XtString:TXconst; para3:TWidgetClass; para4:PDisplay):TWidget;cdecl;external;
    {***************************************************************
     *
     * Toolkit initialization
     *
     *************************************************************** }
procedure XtToolkitInitialize;cdecl;external;
    { app_context  }    { proc  }    { client_data  }
function XtSetLanguageProc(para1:TXtAppContext; para2:TXtLanguageProc; para3:TXtPointer):TXtLanguageProc;cdecl;external;
    { app_context  }    { dpy  }    { application_name  }    { application_class  }    { options  }    { num_options  }    { argc  }    { argv  }
procedure XtDisplayInitialize(para1:TXtAppContext; para2:PDisplay; _XtString:TXconst; _XtString:TXconst; para5:PXrmOptionDescRec; 
                para6:TCardinal; para7:Plongint; para8:PXtString);cdecl;external;
    { app_context_return  }    { application_class  }    { options  }    { num_options  }    { argc_in_out  }    { argv_in_out  }    { fallback_resources  }    { widget_class  }    { args  }    { num_args  }
function XtOpenApplication(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; para8:TWidgetClass; para9:TArgList; para10:TCardinal):TWidget;cdecl;external;
    { app_context_return  }    { application_class  }    { options  }    { num_options  }    { argc_in_out  }    { argv_in_out  }    { fallback_resources  }    { widget_class  }    {333333333333333333333333333333333******************************** }function XtVaOpenApplication(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; para8:TWidgetClass; args:array of const):TWidget;cdecl;external;
function XtVaOpenApplication(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; para8:TWidgetClass):TWidget;cdecl;external;
    { obsolete  }
    { app_context_return  }    { application_class  }    { options  }    { num_options  }    { argc_in_out  }    { argv_in_out  }    { fallback_resources  }    { args  }    { num_args  }
function XtAppInitialize(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; para8:TArgList; para9:TCardinal):TWidget;cdecl;external;
    { obsolete  }
    { app_context_return  }    { application_class  }    { options  }    { num_options  }    { argc_in_out  }    { argv_in_out  }    { fallback_resources  }    {333333333333333333333333333333333******************************** }function XtVaAppInitialize(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString; args:array of const):TWidget;cdecl;external;
function XtVaAppInitialize(para1:PXtAppContext; _XtString:TXconst; para3:TXrmOptionDescList; para4:TCardinal; para5:Plongint; 
               para6:PXtString; para7:PString):TWidget;cdecl;external;
    { obsolete  }
    { shell_name  }    { application_class  }    { options  }    { num_options  }    { argc  }    { argv  }
function XtInitialize(_XtString:TXconst; _XtString:TXconst; para3:PXrmOptionDescRec; para4:TCardinal; para5:Plongint; 
               para6:PXtString):TWidget;cdecl;external;
    { app_context  }    { display_string  }    { application_name  }    { application_class  }    { options  }    { num_options  }    { argc  }    { argv  }
function XtOpenDisplay(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; para5:PXrmOptionDescRec; 
               para6:TCardinal; para7:Plongint; para8:PXtString):PDisplay;cdecl;external;
function XtCreateApplicationContext:TXtAppContext;cdecl;external;
    { app_context  }    { specification_list  }
procedure XtAppSetFallbackResources(para1:TXtAppContext; para2:PString);cdecl;external;
    { app_context  }
procedure XtDestroyApplicationContext(para1:TXtAppContext);cdecl;external;
    { widget_class  }
procedure XtInitializeWidgetClass(para1:TWidgetClass);cdecl;external;
    { widget  }
function XtWidgetToApplicationContext(para1:TWidget):TXtAppContext;cdecl;external;
    { dpy  }
function XtDisplayToApplicationContext(para1:PDisplay):TXtAppContext;cdecl;external;
    { dpy  }
function XtDatabase(para1:PDisplay):TXrmDatabase;cdecl;external;
    { screen  }
function XtScreenDatabase(para1:PScreen):TXrmDatabase;cdecl;external;
    { dpy  }
procedure XtCloseDisplay(para1:PDisplay);cdecl;external;
    { widget  }    { base  }    { resources  }    { num_resources  }    { args  }    { num_args  }
procedure XtGetApplicationResources(para1:TWidget; para2:TXtPointer; para3:TXtResourceList; para4:TCardinal; para5:TArgList; 
                para6:TCardinal);cdecl;external;
    { widget  }    { base  }    { resources  }    { num_resources  }    {333333333333333333333333333333333******************************** }procedure XtVaGetApplicationResources(para1:TWidget; para2:TXtPointer; para3:TXtResourceList; para4:TCardinal; args:array of const);cdecl;external;
procedure XtVaGetApplicationResources(para1:TWidget; para2:TXtPointer; para3:TXtResourceList; para4:TCardinal);cdecl;external;
    { widget  }    { base  }    { name  }    { class  }    { resources  }    { num_resources  }    { args  }    { num_args  }
procedure XtGetSubresources(para1:TWidget; para2:TXtPointer; _XtString:TXconst; _XtString:TXconst; para5:TXtResourceList; 
                para6:TCardinal; para7:TArgList; para8:TCardinal);cdecl;external;
    { widget  }    { base  }    { name  }    { class  }    { resources  }    { num_resources  }    {333333333333333333333333333333333******************************** }procedure XtVaGetSubresources(para1:TWidget; para2:TXtPointer; _XtString:TXconst; _XtString:TXconst; para5:TXtResourceList; 
                para6:TCardinal; args:array of const);cdecl;external;
procedure XtVaGetSubresources(para1:TWidget; para2:TXtPointer; _XtString:TXconst; _XtString:TXconst; para5:TXtResourceList; 
                para6:TCardinal);cdecl;external;
    { widget  }    { args  }    { num_args  }
procedure XtSetValues(para1:TWidget; para2:TArgList; para3:TCardinal);cdecl;external;
    { widget  }    {333333333333333333333333333333333******************************** }procedure XtVaSetValues(para1:TWidget; args:array of const);cdecl;external;
procedure XtVaSetValues(para1:TWidget);cdecl;external;
    { widget  }    { args  }    { num_args  }
